syntax = "proto3";
package v0api;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "protobug.v0";
option java_outer_classname = "V0";

service TheService {
    rpc getTime(GetTimeReq) returns (GetTimeResp) {}
}

message GetTimeReq {
    string hi = 1;
}

message GetTimeResp {
    google.protobuf.Timestamp the_time = 1;
}
